# ab

./: .clang-format  CMakeLists.txt  test.hpp
ab/: CMakeLists.txt
ab-dump/src/: ab-dump.cpp
ab/include/Ab/: leb128.hpp
ab/include/Ab/Wasm/: ExprDispatch.hpp  ExprPrinter.hpp  ExprPrinter.inl.hpp  ExprReader.hpp  ExprReader.inl.hpp  Expression.hpp  Expression.inl.hpp  Ir.hpp  Ir.inl.hpp  NoOpVisitor.hpp  OpCode.hpp  OpDispatch.hpp  OpName.hpp  Printing.hpp  Printing.inl.hpp  Reader.hpp  Reader.inl.hpp  SectionCode.hpp  Visitor.hpp
ab/include/Ab/Wasm/Binary/: Ir.hpp
ab/src/: ab-main.cpp
asm/: CMakeLists.txt  README.rst
asm/src/: ab-asm-main.cpp
clj/: README.rst
cmake/modules/: Utilities.cmake
commands/src/: ab-commands-disasm.cpp
core/: CMakeLists.txt
core/include/Ab/: Context.hpp  InternalFunctionBuilder.hpp.jinja  InternalOpCode.hpp.jinja  InternalOperators.hpp.in  Interpreter.hpp  Interpreter.hpp.jinja  LinearMemory.hpp  Module.hpp  PtrLike.hpp  Runtime.hpp  VirtualMachineState.hpp  leb128.hpp
core/include/Ab/Wasm/: ExprDispatch.hpp  ExprPrinter.hpp  Expression.hpp  InflateVisitor.hpp  Ir.hpp  Loader.hpp  NoOpVisitor.hpp  OpCode.hpp.jinja  Printing.hpp  Printing.inl.hpp  Reader.hpp  TypeCode.hpp  Visitor.hpp
core/src/: ab-core-Interpreter.cpp.jinja
core/src/Wasm/: ab-core-wasm-Loader.cpp
core/test/: CMakeLists.txt  ab-test-InternalFunctionBuilder.cpp  ab-test-InterpreterTest.cpp
data/: internal-operators.yaml  internal_operators.yaml  interpreter_state.yaml  wasm-operators.yaml  wasm_operators.yaml
dump/: CMakeLists.txt
dump/src/: ab-dump-main.cpp
interpreter/src/: ab-interpreter-main.cpp
om/include/Om/: Barrier.hpp  Cell.hpp  Cell.inl.hpp  Id.hpp  Id.inl.hpp  Map.hpp  Map.inl.hpp  Value.hpp  Value.inl.hpp
scripts/: generate-cxx.py
util/: CMakeLists.txt
util/include/Ab/: Address.hpp  Assert.hpp  Bytes.hpp  Combinators.hpp  Debug.hpp  Maybe.hpp  MaybeStorage.hpp  Nothing.hpp  Page.hpp  Process.hpp  PtrLike.hpp  Rc.hpp  SexprPrinter.hpp  SizeP2.hpp  StaticPoly.hpp  Vector.hpp
util/include/Ab/Meta/: Mixin.hpp
util/src/: ab-util-Process.cpp  ab-util-SexprPrinter.cpp
util/test/: CMakeLists.txt  TestMaybe.cpp  TestPage.cpp  TestVec.cpp
wast/include/Ab/Wast/: Lexer.hpp
wast/src/: ab-wast-FunctionParser.cpp.rl.jinja
